# differential-geometry

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_all.sh  clean.sh  main.cpp  main_tests.cpp  tests.sh  variable.cpp  variable.hpp
ci/: build_gtest.sh
expression/: iexpression.cpp  iexpression.hpp  scalar.cpp  sum.cpp  sum.hpp
src/: CMakeLists.txt  main.cpp  variable.cpp  variable.hpp
src/expression/: compositeexpression.cpp  compositeexpression.hpp  iexpression.cpp  iexpression.hpp  monomial.cpp  monomial.hpp  multiplication.cpp  multiplication.hpp  scalar.cpp  scalar.hpp  sum.cpp  sum.hpp
src/expression/functions/: cosine.cpp  cosine.hpp  sine.cpp  sine.hpp
src/utils/: algorithms.hpp  noncopiable.hpp
tests/: CMakeLists.txt  makefile  test_monomial.cpp  test_polynomial.cpp  test_trigo_functions.cpp
utils/: make_unique.hpp  noncopiable.hpp
